Style labels and fix bug wtih not showing expense graph

--- a/expense-management-app/wwwroot/css/site.css
+++ b/expense-management-app/wwwroot/css/site.css
@@ -225,3 +225,18 @@ nav.navbar {
 .app-logo {
     padding: 10px 30px;
 }
+
+
+label {
+    color: black;
+    font-size: 18px;
+}
+
+.remember {
+    color: white;
+}
+
+input {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
